hard-gists/e76e7c2a2aff228d7807/run.log
=== Docker Run Log for e76e7c2a2aff228d7807 ===
Started at: Mi 29. Okt 20:47:48 CET 2025

[2025-10-29 20:47:48] START: Running container for e76e7c2a2aff228d7807
[2025-10-29 20:47:48] SUCCESS: Container e93bc2083f2f2b36667fb4ad7ed65411e0f59846fab382962b6be0c38e604091 started for e76e7c2a2aff228d7807
=== Container logs for e76e7c2a2aff228d7807 ===
  File "/snippet.py", line 11
    print E.order() == p
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e76e7c2a2aff228d7807 ===
[2025-10-29 20:47:50] INFO: Container e93bc2083f2f2b36667fb4ad7ed65411e0f59846fab382962b6be0c38e604091 has stopped
